# shopMini

./: crud.py  items_views.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_07_23_1435-e723e18925b7_create_products_table.py  2025_07_23_1548-ea8ffef2c694_create_users_table.py  2025_07_23_1604-ffa880e2f703_create_posts_table.py  2025_07_23_2105-1e6d6ee7378f_create_profile_table.py  2025_07_25_2017-f4bbdf912838_create_orders_table.py  2025_07_25_2140-785d796ae740_create_order_product_association_table.py  2025_07_26_0221-e6fa4beee41d_add_count_column_to_order_product_.py  2025_07_26_1211-59587416e9f4_add_unit_price_column_to_order_product_.py
api_v1/demo_auth/: demo_jwt_auth.py  helpers.py  validation.py  views.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
auth/: utils.py
core/: config.py
core/models/: __init__.py  db_helper.py  mixins.py  order.py  order_product_association.py  post.py  product.py  user.py
